changed primary color to secondary

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,8 +16,8 @@ format:
   html:
     toc: true
     theme:
-      light: [cosmo, theme.scss]
-      dark: [cosmo, theme-dark.scss]
+      light: [flatly, theme.scss]
+      dark: [flatly, theme-dark.scss]
     code-copy: true
     code-overflow: wrap
     css: styles.css
