rm py example, added ojs shiny example

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,10 +11,10 @@ website:
       - section: "A Quarto Doc"
         contents:
           - index.qmd
+          - ojs-shiny.qmd
           - obs.qmd
           - js.qmd
           - rmd.qmd
-          - py.qmd
           - shiny.qmd
   navbar:
     type: light
